--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//camunda client
-	implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-external-task-client:7.19.0'
+//	implementation 'org.camunda.bpm.springboot:camunda-bpm-spring-boot-starter-external-task-client:7.19.0'
+
+	// Camunda 8 (Zeebe)
+ 	implementation 'io.camunda.spring:spring-boot-starter-camunda:8.2.0'
+
+
 
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
